syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.edu.zup.grpc";
option java_outer_classname = "KeyManager";

package br.com.edu.zup;

service KeyManagerService {


  rpc registraChavePix (SolicitacaoRequest) returns (SolicitacaoResponse) {}

}

enum TipoDeChave {

  DESCONHECIDO_TIPOCHAVE = 0;
  CPF = 1;
  TELEFONE_CELULAR = 2;
  EMAIL = 3;
  CHAVE_ALEATORIA = 4;

}

enum TipoDeConta {

  DESCONHECIDO_TIPOCONTA = 0;
  CONTA_POUPANCA = 1;
  CONTA_CORRENTE = 2;

}

message SolicitacaoRequest {

  string codigoInterno = 1;
  TipoDeChave tipoChave = 2;
  string valorChave = 3;
  TipoDeConta tipoConta = 4;

}

message SolicitacaoResponse {
  string pixId = 1;
}

message IdentificadorRequest {
  string idCliente = 1;
}

message IdentificadorResponse {
  string idCliente = 1;
}

message ErrorDetails{

  int32 codigo =1;
  string messagem = 2;
  repeated string atributos = 3;
}